<?xml version="1.0" encoding="utf-8"?>
<resources>

     <string name="app_name">Zapdus</string>
    <string name="hello_world">Home Automation</string>
    <string name="action_settings">Instructions</string>
    <string name="action_resettings">Reset</string>
    <string name="ser">Search</string>
    <string name="dev1">Developer</string>
    <string name="bselect">Select btSerial device from paired devices:</string>
    <string name="led1">Switch1</string>
    <string name="led2">Switch2</string>
    <string name="led3">Switch3</string>
    <string name="led4">Switch4</string>
    <string name="led5">Switch5</string>
    <string name="led6">Switch6</string>
    <string name="led7">Switch7</string>
    <string name="led8">Switch8</string>
    <string name="led9">Switch9</string>
    <string name="hub">HUB:</string>
    <string name="ha">HOME AUTOMATION</string>
    <string name="ifdevice">If no devices are listed please pair your device in Android settings</string>
    <string name="ab">About App</string>
    <string name="emg">Energy</string>
    <string name="settimer">Set Timer</string>
    <string name="entermin">Enter No. of min</string>
    <string name="fa">Fan</string>
    <string name="faspeed">Fan Speed:0</string>
    <string name="lod">Loading.....</string>
    <string name="test">Test</string>

</resources>
